--- a/README
+++ b/README
@@ -57,3 +57,23 @@ Example
    $ make
 
    $ ./models/MSSM/run_MSSM.x # run the spectrum generator
+
+
+Dynamic libraries
+=================
+
+If you want to create dynamic libraries (instead of static libraries)
+you have to pass all the following options to the ./configure script
+
+   --libext=".so"
+   --make-lib-cmd="gcc -shared -o"
+   --with-cxxflags="-std=c++11 -O2 -fPIC"
+   --with-fflags="-fPIC -O2"
+
+Example:
+
+   $ ./configure --with-models=MSSM,NMSSM \
+     --libext=".so" \
+     --make-lib-cmd="gcc -shared -o" \
+     --with-cxxflags="-std=c++11 -O2 -fPIC" \
+     --with-fflags="-fPIC -O2"
