The link target is no longer needed.  It can be replaced by
   $ make clean-executables
   $ make allexec

--- a/README
+++ b/README
@@ -82,6 +82,7 @@ The libraries are linked to the executables with _absolute_ paths.
 This means that, if you move the package directory to another
 location, the executables will no longer work, because the libraries
 are now at another place.  To make the executables work again, you
-have to relink them via
+have to rebuild them via
 
-   $ make link
+   $ make clean-executables
+   $ make allexec
