create toc links

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -17,6 +17,10 @@
   showspaces=false,
   showstringspaces=false,
   frame=single}
+\usepackage[pdftitle={FlexibleSUSY --- A spectrum generator generator for supersymmetric models},
+pdfauthor={Jae-hyeon Park,Dominik Stockinger,Alexander Voigt},
+pdfkeywords={FlexibleSUSY,supersymmetry,spectrum,generator,MSSM,NMSSM,E6SSM},
+bookmarks=true, linktocpage]{hyperref}
 
 \title{\bf FlexibleSUSY --- A spectrum generator generator for
   supersymmetric models}
