--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -3,6 +3,8 @@
 \usepackage[lmargin=2.5cm,rmargin=2.5cm,tmargin=2.5cm,bmargin=3.5cm]{geometry}
 \usepackage{amsmath,amssymb}
 \usepackage[T1]{fontenc}          % output font encoding
+\usepackage{booktabs,tabularx}
+\usepackage{rotating}             % for sidewaystable
 \usepackage[usenames]{xcolor}
 \usepackage{listings}             % source code highlighting
 \lstset{breaklines=true,
