--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -6,6 +6,7 @@
 \usepackage{booktabs,tabularx}
 \usepackage{rotating}             % for sidewaystable
 \usepackage[usenames]{xcolor}
+\usepackage{tikz,tikz-uml}
 \usepackage{listings}             % source code highlighting
 \lstset{breaklines=true,
   breakatwhitespace=true,
