briefly explain the ./createmodel script

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -24,6 +24,9 @@ pdfauthor={Jae-hyeon Park,Dominik Stockinger,Alexander Voigt},
 pdfkeywords={FlexibleSUSY,supersymmetry,spectrum,generator,MSSM,NMSSM,E6SSM},
 bookmarks=true, linktocpage]{hyperref}
 
+\newcommand{\sarah}{\texttt{SARAH}}
+\newcommand{\flexisusy}{\texttt{FlexibleSUSY}}
+
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}}  % inline source code
