add Peter Athron to contributor list

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -20,7 +20,7 @@
   showstringspaces=false,
   frame=single}
 \usepackage[pdftitle={FlexibleSUSY --- A spectrum generator generator for supersymmetric models},
-pdfauthor={Jae-hyeon Park,Dominik Stockinger,Alexander Voigt},
+pdfauthor={Peter Athron,Jae-hyeon Park,Dominik Stockinger,Alexander Voigt},
 pdfkeywords={FlexibleSUSY,supersymmetry,spectrum,generator,MSSM,NMSSM,E6SSM},
 bookmarks=true, linktocpage]{hyperref}
 
@@ -31,15 +31,28 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}}  % inline source code
 
-\title{\bf FlexibleSUSY --- A spectrum generator generator for
-  supersymmetric models}
-\author{Jae-hyeon Park, Dominik St\"ockinger, Alexander Voigt\\[2em]
-  {\sl Institut f\"ur Kern- und Teilchenphysik, TU Dresden, Dresden,
-    Germany}}
-\date{\today}
-
 \begin{document}
-\maketitle
+
+\begin{titlepage}
+  \vspace*{55mm}
+  \begin{center}
+    {\Large\bf FlexibleSUSY --- A spectrum generator generator for
+      supersymmetric models}
+    \\[8mm]
+    Peter Athron$^{*}$,
+    Jae-hyeon Park$^{\dagger}$,
+    Dominik St\"ockinger$^{\dagger}$,
+    Alexander Voigt$^{\dagger}$
+    \\[3mm]
+    {\small\it $^*$ ARC Centre of Excellence for Particle Physics at
+      the Terascale, School of Chemistry and Physics, University of
+      Adelaide, Adelaide, SA 5005, Australia
+      \\[2mm]
+      \small\it $^\dagger$ Institut f\"ur Kern und Teilchenphysik, TU
+      Dresden, Dresden, 01062, Germany.\\[2mm]}
+  \end{center}
+\end{titlepage}
+
 \tableofcontents
 \clearpage
 \input{doc/chapters/overview}
