automatically generate tex file with package version

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -31,6 +31,8 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}}  % inline source code
 
+\input{doc/version}
+
 \begin{document}
 
 \begin{titlepage}
@@ -51,6 +53,15 @@ bookmarks=true, linktocpage]{hyperref}
       \small\it $^\dagger$ Institut f\"ur Kern und Teilchenphysik, TU
       Dresden, Dresden, 01062, Germany.\\[2mm]}
   \end{center}
+  \vspace*{0.75cm}
+  \begin{abstract}
+    We present a new spectrum generator generator for supersymmetric
+    models with modularity and speed in mind.
+  \end{abstract}
+  \vfill
+  \begin{flushleft}
+    FlexibleSUSY version \FlexibleSUSYVersion
+  \end{flushleft}
 \end{titlepage}
 
 \tableofcontents
