do not set SARAH and FlexibleSUSY in typewriter font

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -27,8 +27,8 @@ bookmarks=true, linktocpage]{hyperref}
 
 \input{doc/version}
 
-\newcommand{\sarah}{\texttt{SARAH}}
-\newcommand{\flexisusy}{\texttt{\FlexibleSUSY}}
+\newcommand{\sarah}{SARAH\xspace}
+\newcommand{\flexisusy}{\FlexibleSUSY}
 
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
