Added program name to abstract.

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -56,8 +56,8 @@ bookmarks=true, linktocpage]{hyperref}
   \end{center}
   \vspace*{0.75cm}
   \begin{abstract}
-    We present a new spectrum generator generator for supersymmetric
-    models with modularity and speed in mind.
+    We present FlexibleSUSY a new spectrum generator generator for
+    supersymmetric models with modularity and speed in mind.
   \end{abstract}
   \vfill
   \begin{flushleft}
