add note about new --disable-meta configure option

--- a/README
+++ b/README
@@ -91,6 +91,23 @@ It will only check for Mathematica and SARAH.  The execution of `make'
 will stop as soon as all C++ source code files are generated.
 
 
+Compile only
+============
+
+If you want to only compile already created the C++ source files for
+your model, you can use the --disable-meta configure option:
+
+   $ ./configure --with-models=MSSM --disable-meta
+   $ make
+
+Here, configure will only check for installed compilers or libraries.
+It will not check for Mathematica and SARAH.
+
+Warning: Please make sure all C++ source files of your model are
+available in the model directory models/<model>/ .  Otherwise the
+compilation will fail.
+
+
 Dynamic libraries
 =================
 
