Added additional subsection.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -206,6 +206,7 @@ Different types, how we match to low energy data.  reference EWSB or merge that 
 \subsection{two scale fixed point iteration}
 \subsection{Lattice method}
 If ready.
+\subsection{multiple effective models at different scales}
 \section{Implementing new models}
 \section{Adapting the code at the C++ level}
 \appendix
