added a couple of references.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -145,7 +145,7 @@ Detailed phenonenological studies have been carried out for scenarios
 with the minimal supersymmetric standard model (MSSM). Many
 computational tools have been created to aid these studies and to
 explore the model. In particular there are a number of public spectrum
-generators for MSSM\cite{} and one for the NMSSM\cite{} which allow
+generators for MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae} and two for the NMSSM\cite{Ellwanger:2006rn,Allanach:nmssm} which allow
 one to find the sparticle spectrum and mixings for a particular
 choices of breaking mechanism inspired boundary conditions and
 specified parameters.
@@ -384,6 +384,39 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   [hep-ph/0104145].
   %%CITATION = HEP-PH/0104145;%%
   %716 citations counted in INSPIRE as of 20 Sep 2013
+%\cite{Porod:2003um}
+\bibitem{Porod:2003um} 
+  W.~Porod,
+  %``SPheno, a program for calculating supersymmetric spectra, SUSY particle decays and SUSY particle production at e+ e- colliders,''
+  Comput.\ Phys.\ Commun.\  {\bf 153}, 275 (2003)
+  [hep-ph/0301101].
+  %%CITATION = HEP-PH/0301101;%%
+  %413 citations counted in INSPIRE as of 03 Nov 2013
+
+%\cite{Djouadi:2002ze}
+\bibitem{Djouadi:2002ze} 
+  A.~Djouadi, J.~-L.~Kneur and G.~Moultaka,
+  %``SuSpect: A Fortran code for the supersymmetric and Higgs particle spectrum in the MSSM,''
+  Comput.\ Phys.\ Commun.\  {\bf 176}, 426 (2007)
+  [hep-ph/0211331].
+  %%CITATION = HEP-PH/0211331;%%
+  %654 citations counted in INSPIRE as of 03 Nov 2013
+
+%\cite{Baer:1993ae}
+\bibitem{Baer:1993ae} 
+  H.~Baer, F.~E.~Paige, S.~D.~Protopopescu and X.~Tata,
+  %``Simulating Supersymmetry with ISAJET 7.0 / ISASUSY 1.0,''
+  hep-ph/9305342.
+  %%CITATION = HEP-PH/9305342;%%
+  %82 citations counted in INSPIRE as of 03 Nov 2013
+%\cite{Ellwanger:2006rn}
+\bibitem{Ellwanger:2006rn} 
+  U.~Ellwanger and C.~Hugonie,
+  %``NMSPEC: A Fortran code for the sparticle and Higgs masses in the NMSSM with GUT scale boundary conditions,''
+  Comput.\ Phys.\ Commun.\  {\bf 177}, 399 (2007)
+  [hep-ph/0612134].
+  %%CITATION = HEP-PH/0612134;%%
+  %81 citations counted in INSPIRE as of 03 Nov 2013
 
 %\cite{Degrassi:2009yq}
 \bibitem{Degrassi:2009yq} 
