--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -74,23 +74,24 @@ TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
   \begin{abstract}
    Here we introduce \fs, a MATHEMATICA package which generates a C++
    spectrum generator for any SUSY model, created with modularity and
-   speed in mind.  \fs makes use of the existing \sarah package to
-   obtain self energies, tadpoles corrections and renormalisation
+   speed in mind.  \fs makes use of the existing \sarah package
+   to obtain self energies, tadpoles corrections and renormalisation
    group equations in any model.  \fs then generates C++ code for
    calculating spectra with a structure that is designed to be
-   flexible. The user specifies the model supplying the superpotential,
-   gauge structure and particle content in a \sarah model file. The
-   user should also specify the boundary conditions in a separate \fs
-   model file. {\color{red}( Do we want to keep this separate and in
-     different places, add a script to put a SARAH model file in the
-     right place or combine them?)}  Flexible SUSY then translates
-   these into C++ code along with numerical routines for solving the
-   renormalisation group equations, one loop electroweak symmetry
-   breaking conditions and a solver routine for simultaneously solving
-   for the spectrum.  The modular structure of the generated code
-   allows for any individual component to be replaced with an
-   alternative if available.  Indeed \fs has been intentionally
-   designed to grow as alternative solvers and calculators are added.
+   flexible. The user specifies the model supplying the
+   superpotential, gauge structure and particle content in a \sarah
+   model file. The user should also specify the boundary conditions in
+   a separate \fs model file. {\color{red}( Do we want to keep this
+     separate and in different places, add a script to put a \sarah
+     model file in the right place or combine them?)}  Flexible SUSY
+   then translates these into C++ code along with numerical routines
+   for solving the renormalisation group equations, one loop
+   electroweak symmetry breaking conditions and a solver routine for
+   simultaneously solving for the spectrum.  The modular structure of
+   the generated code allows for any individual component to be
+   replaced with an alternative if available.  Indeed \fs has been
+   intentionally designed to grow as alternative solvers and
+   calculators are added.
   \end{abstract}
 \begin{keyword}
 sparticle, 
@@ -190,7 +191,7 @@ are interested and what the general features of such models are.
 \fs is a MATHEMATICA package designed to create a fast and easily
 adaptable spectrum generator in C++ for any SUSY model and some
 non-supersymmetric models {\color{red} can we?}.  \fs makes use of the
-existing \sarah package to obtain one-loop self energies, one-loop
+existing \sarah package \cite{Staub:2010ty,Staub:2009bi,Staub:2010jh,Staub:2012pb,Staub:2013tta} to obtain one-loop self energies, one-loop
 tadpoles corrections and two-loop renormalisation group
 equations(RGEs) in any model.  \fs then converts these algerbraic
 expressions from \sarah into C++ code using the C++11 standard. \fs
@@ -347,6 +348,142 @@ $\oabq$, $\oatauq$ and $\oatab$  as follows...
 Something similar is done for the NMSSM, but in this case the NMSSM $\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}.
  Corrections from other sources can be added to the generated code by...
 \subsection{two scale fixed point iteration}
+The default solver which calls the above routines above and finds the full set of $\overline{DR}$ masses in the model consistent with all constraints is the two-scale solver.  This can be selected by... but if no selection is made this will be used anyway as default. 
+
+This approach is decribed in \cite{Barger:1993gh} for the MSSM and is widely implemented in SUSY spectrum generators.  
+
+
+The stucture of the two-scale algorithm used in \fs is as follows,
+%
+Initial guess:
+\begin{enumerate}
+\item Guess gauge couplings $g_{1,2,3}$ at $m_Z$
+\item Apply user-defined low-scale constraint (\code{LowScaleInput})
+\item Guess Yukawa couplings $y^{u,d,e}_{ij}$ at $m_Z$
+\item Run model to the high-scale (\code{HighScaleFirstGuess})
+\item Apply high-scale constraint (\code{HighScaleInput})
+\item Run model to the low-scale (\code{LowScaleFirstGuess})
+\item Solve EWSB eqs.\ at the tree-level
+\item Calculate \DRbar\ masses
+\end{enumerate}
+%
+Solving the renormalization group equations:
+\begin{enumerate}
+\item \label{rge-step-one} Run model to the low-scale (\code{LowScale})
+  \begin{enumerate}
+  \item Calculate \DRbar\ masses
+  \item Recalculate low-scale
+  \item Calculate \DRbar\ gauge and Yukawa couplings $g_{1,2,3}$, $y^{u,d,e}_{ij}$
+  \item Apply user-defined low-scale constraint (\code{LowScaleInput})
+  \end{enumerate}
+\item Run model to the high-scale (\code{HighScale})
+  \begin{enumerate}
+  \item Recalculate high-scale
+  \item Apply high-scale constraint (\code{HighScaleInput})
+  \end{enumerate}
+\item Run model to the susy-scale (\code{SUSYScale})
+  \begin{enumerate}
+  \item Calculate \DRbar\ masses
+  \item Recalculate low-scale
+  \item Apply susy-scale constraint (\code{SUSYScaleInput})
+  \item Solve EWSB eqs.\ at the one-loop level
+  \end{enumerate}
+\item If not converged yet, goto \ref{rge-step-one}
+\end{enumerate}
+%
+Calculating the particle spectrum:
+\begin{enumerate}
+\item Run model to the susy-scale
+\item Calculate the pole masses
+\item Run model to the parameter output scale (SLHA block MODSEL 12)
+\end{enumerate}
+
+\begin{figure}[tb]
+  \centering
+  \tikzumlset{fill class=white}
+  \begin{tikzpicture}
+    \umlclass[x=0, y=0, type=abstract]{Beta\_function}{
+      -- scale : double\\
+      -- loops : unsigned\\
+      -- numPars : unsigned
+    }{
+      + \umlvirt{display() : const Eigen::ArrayXd} \\
+      + \umlvirt{set(v : const Eigen::ArrayXd\&) : void}\\
+      + \umlvirt{beta() : Eigen::ArrayXd}\\
+      + run\_to(scale : double, eps : double) : void\\
+    }
+    \umlclass[x=8, y=-12, template={T}]{MSSM}{}{}
+    \umlclass[x=8, y=-8, type=abstract]{Two\_scale\_model}{}{
+      + \umlvirt{calculate\_spectrum() : void}\\
+      + \umlvirt{run\_to(scale : double, eps : double) : void}\\
+      + \umlvirt{set\_precision(precision : double) : void}
+    }
+    \umlclass[x=0, y=-4]{MSSM\_susy\_parameters}{}{
+      + display() : const Eigen::ArrayXd \\
+      + set(v : const Eigen::ArrayXd\&) : void\\
+      + beta() : Eigen::ArrayXd
+    }
+    \umlclass[x=0, y=-8]{MSSM\_soft\_parameters}{}{
+      + display() : const Eigen::ArrayXd \\
+      + set(v : const Eigen::ArrayXd\&) : void\\
+      + beta() : Eigen::ArrayXd
+    }
+    \umlclass[x=0, y=-12]{MSSM$<$Two\_scale$>$}{}{
+      + calculate\_spectrum() : void\\
+      + run\_to(scale : double, eps : double) : void\\
+      + set\_precision(precision : double) : void
+    }
+   \umlinherit{MSSM\_susy\_parameters}{Beta\_function}
+   \umlinherit{MSSM\_soft\_parameters}{MSSM\_susy\_parameters}
+   \umlinherit{MSSM$<$Two\_scale$>$}{MSSM\_soft\_parameters}
+   \umlinherit{MSSM$<$Two\_scale$>$}{Two\_scale\_model}
+   \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{MSSM$<$Two\_scale$>$}{MSSM}
+  \end{tikzpicture}
+  \caption{Two-scale model class hierarchy}
+  \label{fig:two-scale-model-class-hierarchy}
+\end{figure}
+
+\begin{figure}[tb]
+  \centering
+  \tikzumlset{fill class=white}
+  \begin{tikzpicture}
+    \umlclass[x=0, y=0, type=abstract]{Two\_scale\_model}{}{
+      + \umlvirt{calculate\_spectrum() : void}\\
+      + \umlvirt{run\_to(scale : double, eps : double) : void}\\
+      + \umlvirt{set\_precision(precision : double) : void}
+    }
+    \umlclass[x=0, y=-4]{RGFlow$<$Two\_scale$>$}{}{
+      + solve() : void
+    }
+    \umlclass[x=8, y=0]{Constraint$<$Two\_scale$>$}{}{
+      + \umlvirt{apply() : void}\\
+      + \umlvirt{get\_scale() : double}\\
+      + \umlvirt{set\_model(model : Two\_scale\_model*) : void}
+    }
+    \umlclass[x=8, y=4, template={T}]{Constraint}{}{}
+    \umlclass[x=0, y=-7]{Initial\_guesser$<$Two\_scale$>$}{}{
+      + \umlvirt{guess() : void}
+    }
+    \umlclass[x=0, y=-11, template={T}]{Initial\_guesser}{}{}
+    \umlclass[x=8, y=-7]{Convergence\_tester$<$Two\_scale$>$}{}{
+      + \umlvirt{accuracy\_goal\_reached() : bool}\\
+      + \umlvirt{max\_iterations() : unsigned}
+    }
+    \umlclass[x=8, y=-11, template={T}]{Convergence\_tester}{}{}
+    \umlclass[x=8, y=-4, template={T}]{RGFlow}{}{}
+    \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{RGFlow$<$Two\_scale$>$}{RGFlow}
+    \umldep[mult1=1..*]{RGFlow$<$Two\_scale$>$}{Two\_scale\_model}
+    \umldep[mult1=1..*]{RGFlow$<$Two\_scale$>$}{Constraint$<$Two\_scale$>$}
+    \umldep{RGFlow$<$Two\_scale$>$}{Initial\_guesser$<$Two\_scale$>$}
+    \umldep{RGFlow$<$Two\_scale$>$}{Convergence\_tester$<$Two\_scale$>$}
+    \umldep[mult1={$<<$bind$>>$}, arg1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Initial\_guesser$<$Two\_scale$>$}{Initial\_guesser}
+    \umldep[mult1={$<<$bind$>>$}, arg1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Convergence\_tester$<$Two\_scale$>$}{Convergence\_tester}
+    \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Constraint$<$Two\_scale$>$}{Constraint}
+  \end{tikzpicture}
+  \caption{Two-scale renormalization group solver class hierarchy}
+  \label{fig:two-scale-rgflow-class-hierarchy}
+\end{figure}
+{\color{red} copied and pasted from latest manual -- not sure how best to maintain this, could split maual up into tiny bits, but we may also want some differences?}
 \subsection{pole masses}
 With the solver routine finished and convergence achieved, the $\overline{DR}$ parameters consistent with one loop EWSB, low energy data and all user supplied boundary conditions are then known at any scale between...
 
@@ -418,6 +555,51 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   %%CITATION = HEP-PH/0612134;%%
   %81 citations counted in INSPIRE as of 03 Nov 2013
 
+  %\cite{Staub:2010ty}
+\bibitem{Staub:2010ty} 
+  F.~Staub, W.~Porod and B.~Herrmann,
+  %``The Electroweak sector of the NMSSM at the one-loop level,''
+  JHEP {\bf 1010}, 040 (2010)
+  [arXiv:1007.4049 [hep-ph]].
+  %%CITATION = ARXIV:1007.4049;%%
+  %28 citations counted in INSPIRE as of 12 Oct 2013
+
+%\cite{Staub:2009bi}
+\bibitem{Staub:2009bi} 
+  F.~Staub,
+  %``From Superpotential to Model Files for FeynArts and CalcHep/CompHep,''
+  Comput.\ Phys.\ Commun.\  {\bf 181}, 1077 (2010)
+  [arXiv:0909.2863 [hep-ph]].
+  %%CITATION = ARXIV:0909.2863;%%
+  %64 citations counted in INSPIRE as of 12 Oct 2013
+
+%\cite{Staub:2010jh}
+\bibitem{Staub:2010jh} 
+  F.~Staub,
+  %``Automatic Calculation of supersymmetric Renormalization Group Equations and Self Energies,''
+  Comput.\ Phys.\ Commun.\  {\bf 182}, 808 (2011)
+  [arXiv:1002.0840 [hep-ph]].
+  %%CITATION = ARXIV:1002.0840;%%
+  %60 citations counted in INSPIRE as of 12 Oct 2013
+
+%\cite{Staub:2012pb}
+\bibitem{Staub:2012pb} 
+  F.~Staub,
+  %``SARAH 3.2: Dirac Gauginos, UFO output, and more,''
+  Computer Physics Communications {\bf 184}, pp. 1792 (2013)
+  [Comput.\ Phys.\ Commun.\  {\bf 184}, 1792 (2013)]
+  [arXiv:1207.0906 [hep-ph]].
+  %%CITATION = ARXIV:1207.0906;%%
+  %19 citations counted in INSPIRE as of 12 Oct 2013
+
+%\cite{Staub:2013tta}
+\bibitem{Staub:2013tta} 
+  F.~Staub,
+  %``SARAH 4: A tool for (not only SUSY) model builders,''
+  arXiv:1309.7223 [hep-ph].
+  %%CITATION = ARXIV:1309.7223;%%
+  %2 citations counted in INSPIRE as of 12 Oct 2013
+
 %\cite{Degrassi:2009yq}
 \bibitem{Degrassi:2009yq} 
   G.~Degrassi and P.~Slavich,
@@ -482,50 +664,13 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   %28 citations counted in INSPIRE as of 24 Sep 2013
 
 
-  %\cite{Staub:2010ty}
-\bibitem{Staub:2010ty} 
-  F.~Staub, W.~Porod and B.~Herrmann,
-  %``The Electroweak sector of the NMSSM at the one-loop level,''
-  JHEP {\bf 1010}, 040 (2010)
-  [arXiv:1007.4049 [hep-ph]].
-  %%CITATION = ARXIV:1007.4049;%%
-  %28 citations counted in INSPIRE as of 12 Oct 2013
-
-%\cite{Staub:2009bi}
-\bibitem{Staub:2009bi} 
-  F.~Staub,
-  %``From Superpotential to Model Files for FeynArts and CalcHep/CompHep,''
-  Comput.\ Phys.\ Commun.\  {\bf 181}, 1077 (2010)
-  [arXiv:0909.2863 [hep-ph]].
-  %%CITATION = ARXIV:0909.2863;%%
-  %64 citations counted in INSPIRE as of 12 Oct 2013
-
-%\cite{Staub:2010jh}
-\bibitem{Staub:2010jh} 
-  F.~Staub,
-  %``Automatic Calculation of supersymmetric Renormalization Group Equations and Self Energies,''
-  Comput.\ Phys.\ Commun.\  {\bf 182}, 808 (2011)
-  [arXiv:1002.0840 [hep-ph]].
-  %%CITATION = ARXIV:1002.0840;%%
-  %60 citations counted in INSPIRE as of 12 Oct 2013
-
-%\cite{Staub:2012pb}
-\bibitem{Staub:2012pb} 
-  F.~Staub,
-  %``SARAH 3.2: Dirac Gauginos, UFO output, and more,''
-  Computer Physics Communications {\bf 184}, pp. 1792 (2013)
-  [Comput.\ Phys.\ Commun.\  {\bf 184}, 1792 (2013)]
-  [arXiv:1207.0906 [hep-ph]].
-  %%CITATION = ARXIV:1207.0906;%%
-  %19 citations counted in INSPIRE as of 12 Oct 2013
-
-%\cite{Staub:2013tta}
-\bibitem{Staub:2013tta} 
-  F.~Staub,
-  %``SARAH 4: A tool for (not only SUSY) model builders,''
-  arXiv:1309.7223 [hep-ph].
-  %%CITATION = ARXIV:1309.7223;%%
-  %2 citations counted in INSPIRE as of 12 Oct 2013
+\bibitem{Barger:1993gh} 
+  V.~D.~Barger, M.~S.~Berger and P.~Ohmann,
+  %``The Supersymmetric particle spectrum,''
+  Phys.\ Rev.\ D {\bf 49}, 4908 (1994)
+  [hep-ph/9311269].
+  %%CITATION = HEP-PH/9311269;%%
+  %365 citations counted in INSPIRE as of 03 Nov 2013
 
 \bibitem{eigen}
 Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}
